# PersistentParadoxPlex

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  config.toml  generate_rs_from_proto.sh  generate_rs_from_proto.sh~  upstream.rs
.github/workflows/: docker_build_push.yaml  rust.yml
gen_proto_rs/: backendpeer.rs
misc/: PersistentMarkingLB_architecture_overview.drawio  architecture.drawio  internal_overview_single_instance.drawio
misc/grpc/: index.html  start_stub_server.sh
misc/grpc/proto/: upstream.proto
misc/grpc/stub/: upstream_ready_stub.json  upstream_stub.json  upstream_stub_target.json
proto/: backend.proto  backend_peer.proto  backend_stub.json  start_stub_server.sh  upstream.proto
proto_gen/: Cargo.toml  upstream.grpc.service.rs
proto_gen/src/: main.rs  upstream_proto.rs
src/: admin_management_server.rs  backend.rs  backend_peers.rs  conf.rs  downstream.rs  main.rs  peer.rs  persistent_marking_lb.rs  runtime.rs  upstream.rs  upstream_peer.rs  upstream_proto.rs  utils.rs
src/protoc_files/: backend.rs
