[package]
authors = ["tanguc <sergen.tanguc@gmail.com>"]
edition = "2018"
name = "persistent_marking_lb"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-stream = "0.2.1"
async-trait = "0.1.30"
enclose = "1.1.8"
env_logger = "*"
evmap = "10.0.2"
futures = "0.3.4"
futures-core = "0.3.4"
futures-util = "0.3.4"
linked_hash_set = "0.1.4"
log = "0.4.8"
pretty_env_logger = "0.4.0"
prost = "0.6"
rocket = "0.4"
rocket_contrib = "0.4"
serde = {version = "1.0", features = ["derive"]}
test-env-log = "0.2.2"
tokio = {version = "0.2.13", features = ["sync", "macros", "net", "tcp", "stream", "rt-threaded", "time"]}
tokio-util = {version = "0.3.0", features = ["codec"]}
tonic = {version = "0.2.0"}
tonic-build = "0.2"
tracing = "0.1"
tracing-subscriber = {version = "0.2", features = ["chrono", "env-filter", "fmt"]}
uuid = {version = "0.8.1", features = ["v4"]}

[profile.release]
debug = true
