[package]
authors = ["stanguc <sergen.tanguc@gmail.com>"]
edition = "2018"
name = "proto_gen"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
futures-core = "0.3.4"
futures-util = "0.3.4"
log = "0.4.8"
tonic = {version = "0.2.0"}
tonic-build = "0.2"
